--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jamaibase": "^0.1.1"
+    "jamaibase": "^0.1.1",
+    "node": "^20.14.0"
   }
 }
