--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon api/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jamaibase": "^0.1.1",
-    "node": "^20.14.0"
+    "node": "^20.14.0",
+    "nodemon": "^3.1.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/node": "^20.12.13"
